; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_data.c_data_append_addr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/scripts/dtc/extr_data.c_data_append_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.data = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @data_append_addr(i32 %0, i32 %1) #0 {
  %3 = alloca %struct.data, align 4
  %4 = alloca %struct.data, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = getelementptr inbounds %struct.data, %struct.data* %4, i32 0, i32 0
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @cpu_to_fdt64(i32 %8)
  store i32 %9, i32* %6, align 4
  %10 = getelementptr inbounds %struct.data, %struct.data* %4, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @data_append_data(i32 %11, i32* %6, i32 4)
  %13 = getelementptr inbounds %struct.data, %struct.data* %3, i32 0, i32 0
  store i32 %12, i32* %13, align 4
  %14 = getelementptr inbounds %struct.data, %struct.data* %3, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  ret i32 %15
}

declare dso_local i32 @cpu_to_fdt64(i32) #1

declare dso_local i32 @data_append_data(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
